Extend YARR Interpreter with beginning character look-up optimization https://bugs.webkit.org/show_bug.cgi?id=45751

Patch by Peter Varga <pvarga@inf.u-szeged.hu> on 2010-11-17
Reviewed by Gavin Barraclough.

Add beginning character look-up optimization which sets the start
index to the first possible successful pattern match.
Extend YARR Interpreter with lookupForBeginChars function which
implements the beginning character look-up optimization.

* yarr/RegexInterpreter.cpp:
(JSC::Yarr::Interpreter::InputStream::readPair):
(JSC::Yarr::Interpreter::InputStream::isNotAvailableInput):
(JSC::Yarr::Interpreter::lookupForBeginChars):
(JSC::Yarr::Interpreter::matchDisjunction):
(JSC::Yarr::Interpreter::interpret):
* yarr/RegexInterpreter.h:
(JSC::Yarr::BytecodePattern::BytecodePattern):



Canonical link: https://commits.webkit.org/62648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72186 268f45cc-cd09-0410-ab3c-d52691b4dbfc